2003-09-06  Pierre-Luc Paour <gallery@paour.com> (1.1-RC1-b1)

	* Fixed incompatibility with Java 1.3: I was trying to catch an exception
	  that Java 1.3 doesn't know about, so the class was not even loadable.

2003-08-22  Pierre-Luc Paour <gallery@paour.com> (1.1-RC1)

	* Catching error when using SSL with an untrusted server
	  certificate.

2003-07-26  Pierre-Luc Paour <gallery@paour.com> (1.1-b14)

	* Added keyboard handling so when the user is editing captions
	  and extra fields, the tab and up/down arrows do the expected and
	  useful thing (thanks joel558).

2003-07-19  Pierre-Luc Paour <gallery@paour.com> (1.1-b13)

	* Added a jpegQuality field to the ImageMagick settings.
	* Better handling of null username or password.
	* Clearing cookies when Log out is clicked, so it's possible
	  to log in with different credentials without having to restart GR.

2003-07-01  Pierre-Luc Paour <gallery@paour.com> (1.1-b12)

	* Uses a shutdown handler on Mac for those folks who use Cmd-Q to quit.
	  Mac integration is sorely lacking. I need a Mac guy to help out.

2003-06-26  Pierre-Luc Paour <gallery@paour.com> (1.1-b11)

	* Fixed losing field values when more than one extrafield is used
	  (thanks Joel)
	* Filtering out extrafields "Upload Date" and "Capture Date", which
	  are not editable (thanks Joel).
	* Temporarily building jpegtran in the zip patches until it's in the
	  installer.

2003-06-26  Pierre-Luc Paour <gallery@paour.com> (1.1-b10)

	* Added ability for QuickConfig to handle gallery URLs (you need
	  to use url.99, or any other set of parameters as long as the
	  parameter ends in .99. This can be used to very easily add a
	  Gallery URL to GR, especially useful for CMS.
	* If username and/or password are not set, GalleryComm2 asks for
	  them. This is necessary for when passwords are not saved.
	* An empty Gallery object is no longer created when none have been
	  declared.

2003-06-26  Pierre-Luc Paour <gallery@paour.com> (1.1-b9)
