@@ -2,6 +2,9 @@
 
 	* Fixed incompatibility with Java 1.3: I was trying to catch an exception
 	  that Java 1.3 doesn't know about, so the class was not even loadable.
+	* GR is now built for the Mac differently than for other architectures.
+	  MacOS enjoys something akin to the "French Exception". Or in this case
+	  the Italian exception, since this was led by Amedeo Paglione.
 
 2003-08-22  Pierre-Luc Paour <gallery@paour.com> (1.1-RC1)
 
